--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ baseurl: ""
 
 markdown: redcarpet
 highlighter: pygments
-permalink: /:title/
+permalink: /post/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
