--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ footer-links:
   # twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   googleplus: # anything in your profile username that comes after plus.google.com/
+  zhihu: yao-wei-70
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
