--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ footer-links:
   instagram:
   linkedin: wilenceyao
   pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  # twitter: jekyllrb
+  rss: rss # just type anything here for a working RSS icon, make sure you set the "url" above!
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   googleplus: # anything in your profile username that comes after plus.google.com/
   zhihu: yao-wei-70
@@ -34,14 +34,14 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: wilence
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://wilenceyao.info/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
